--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span>We organize events on different technologies.</span>
 
         </h1>
-        <button class="hero-button" type="button">Learn More</button>
+        <button class="hero-button" type="button">Join on Discord</button>
         </div>
       </div>
       <!-- Hero Section Ends -->
