Navbar items changed

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <ul class="list-group">
           <li class="list-group-items">
             <span class="active-item">Home</span>
-            <a href="#">Projects</a>
             <a href="#">About</a>
             <a href="#">Events</a>
+            <a href="#">Team</a>
             <button type="button" class="cta-nav">Contact</button>
           </li>
         </ul>
