Added discord link to button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span>We organize events on different technologies.</span>
 
         </h1>
-        <button class="hero-button" type="button">Join on Discord</button>
+        <button class="hero-button" type="button"> <a href="https://discord.gg/PqYrPf3X"> Join on Discord</a></button>
         </div>
       </div>
       <!-- Hero Section Ends -->
