--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span>We organize events on different technologies.</span>
 
         </h1>
-        <button class="hero-button" type="button">Join on Discord</button>
+        <a href="https://lnkd.in/eH36Kx9f"> <button class="hero-button" type="button">Join on Discord</button> </a>
         </div>
       </div>
       <!-- Hero Section Ends -->
