Revert "Added icons in inex.html"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeIN Community</title>
     <link rel="stylesheet" href="style/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- Container Starts -->
@@ -21,11 +20,11 @@
         
         <ul class="list-group">
           <li class="list-group-items">
-            <span class="active-item"><i class="fa fa-home">Home</i></span>
-            <a href="#"><i class="fa fa-user-o">About</i></a>
-            <a href="#"><i class="fa fa-calender-o">Events</i></a>
-            <a href="#"><i class="fa fa-users">Team</i></a>
-            <button type="button" class="cta-nav"><i class="fa fa-envelope">Contact</i></button>
+            <span class="active-item">Home</span>
+            <a href="#">About</a>
+            <a href="#">Events</a>
+            <a href="#">Team</a>
+            <button type="button" class="cta-nav">Contact</button>
           </li>
         </ul>
       </nav>
@@ -43,7 +42,7 @@
             <span>We organize events on different technologies.</span>
 
         </h1>
-        <button class="hero-button" type="button"> <a href="https://discord.gg/PqYrPf3X"><i class="fa fa-handshake-o"> Join on Discord</i></a></button>
+        <button class="hero-button" type="button"> <a href="https://discord.gg/PqYrPf3X"> Join on Discord</a></button>
         </div>
       </div>
       <!-- Hero Section Ends -->
