fixes: navbar icons spacing and alignment

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         
         <ul class="list-group">
           <li class="list-group-items">
-            <span class="active-item"><i class="fa fa-home">Home</i></span>
-            <a href="#"><i class="fa fa-user-o">About</i></a>
-            <a href="#"><i class="fa fa-calender-o">Events</i></a>
-            <a href="#"><i class="fa fa-users">Team</i></a>
-            <button type="button" class="cta-nav"><i class="fa fa-envelope">Contact</i></button>
+            <a class="active-item"></span><i class="fa fa-home"></i>Home</a>
+            <a href="#"><i class="fa fa-user-o"></i>About</a>
+            <a href="#"><i class="fa fa-calendar"></i>Events</a>
+            <a href="#"><i class="fa fa-users"></i>Team</a>
+            <button type="button" class="cta-nav"><i class="fa fa-envelope"></i>Contact</button>
           </li>
         </ul>
       </nav>
