added the contact.html link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Events</a></li>
             <li><a href="#education">Teams</a></li>
-            <li><a href="#work">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
          
             </ul>
         </nav>
