--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
+
+    <!-- preloader starts -->
+    <div id="loader">
+    <div class="cssload-loader-inner">
+      <div class="cssload-cssload-loader-line-wrap-wrap">
+        <div class="cssload-loader-line-wrap"></div>
+      </div>
+      <div class="cssload-cssload-loader-line-wrap-wrap">
+        <div class="cssload-loader-line-wrap"></div>
+      </div>
+      <div class="cssload-cssload-loader-line-wrap-wrap">
+        <div class="cssload-loader-line-wrap"></div>
+      </div>
+      <div class="cssload-cssload-loader-line-wrap-wrap">
+        <div class="cssload-loader-line-wrap"></div>
+      </div>
+      <div class="cssload-cssload-loader-line-wrap-wrap">
+        <div class="cssload-loader-line-wrap"></div>
+      </div>
+    </div>
+  </div>
+    <!-- <div id="loader"></div> -->
+    <!-- preloader ends -->
+
     <!-- Container Starts -->
     <div >
       <!-- Navigation Starts -->
@@ -28,7 +52,7 @@
          
             </ul>
         </nav>
-</header>
+    </header>
       <!-- Navigation Ends -->
 
       <!-- Hero-Section Starts  -->
@@ -48,13 +72,19 @@
               <button class="btn btn-warning">Join on Discord</button>
             </div>
         </div>
-       
+       </div>
+       </div>
+       </div>
       <!-- Hero Section Ends -->
-
-      </div>
-    </div>
-    <!-- Container Ends -->
+      <!-- Container Ends -->
   </body>
+
+  <script>
+      var loader = document.getElementById('loader');
+      window.addEventListener('load', function(){
+          loader.style.display="none";
+      });
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./script.js"></script>
 </html>
