--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 Where we share Resources, Roadmaps to learn different technologies.
                 <span>We organize events on different technologies.</span>
               </p>
-              <button class="btn btn-warning">Join on Discord</button>
+              <button class="btn btn-warning"> <a href="https://discord.com/invite/hWwbgP4dz9">Join on Discord</a></button>
             </div>
         </div>
        </div>
