--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/contact.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-    <title>Get In Touch</title>
-</head>
-<body>
-    <div class="wrapper">  
-        <div class="content" >
-            <h4>Get in Touch</h4>
-             </div>     
-        <div class="contact-form">
-            <p> For any queries, fill up this form and our team will get back to you within 24 hours</p>
-            <div class="input-fields">
-                <input type="text" class="input" placeholder="Name">
-                <input type="email" class="input" placeholder="Email Address">
-                <div class="msg">
-                    <textarea placeholder="Messages"></textarea>
-                    <div class="button" onclick="alert('Message has submitted successfully')">Send</div> 
-                <div class="socials">
-                    <ul class="social-icons">
-                      <li><a class="linkedin" href="https://www.linkedin.com/company/codein-community" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-                      <li><a class="github" href="https://github.com/SauravMukherjee44" target="_blank" style="font-size:24px;color: rgb(27, 28, 29);"><i class="fa fa-github" ></i></a></li>
-                      <li><a class="twitter" href="https://twitter.com/mesourav44" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                      <li><a class="Discord" href=" https://discord.gg/hWwbgP4dz9" target="_blank"><i class="fab fa-discord"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-            </div>
-        </div>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CodeIN Community</title>
+    <link rel="stylesheet" href="style/contact.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+  </head>
+
+  <body>
+    <div class="container">
+      <header>
+        <a href="." class="logo">
+          <img
+            src="./media/Images/CodeIN.png"
+            height="24"
+            width="30"
+            alt=""
+            srcset=""
+          />
+          CodeIN Community</a
+        >
+
+        <div id="menu" class="fas fa-bars"></div>
+        <nav class="navbar">
+          <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Events</a></li>
+            <li><a href="#education">Teams</a></li>
+            <li><a href="contact.html" class="contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+
+      <div class="content">
+           <div class="left-side">
+              <div class="head">
+                <h1>Let's talk</h1>
+                <p>Ask us anything or just say hi...</p>
+              </div>
+
+              <div class="email">
+                 <p><i class="fas fa-envelope"></i>          hello@codeincommunity.com</p>  
+              </div>
+
+              <div class="socials">
+                  <button><a href="#"><i class="fab fa-discord"></i></a></button>
+                  <button><a href="#"><i class="fab fa-twitter"></i></a></button>
+                  <button><a href="#"><i class="fab fa-linkedin-in"></i></a></button>
+                  <button><a href="#"><i class="fab fa-instagram"></i></a></button>
+              </div>
+
+           </div>
+
+           <div class="right-side">
+                 <form>
+                     <div class="input-box">
+                         <input type="text" id="name" placeholder="abc">
+                         <label for="name" class="label-1">Name</label>
+
+                         <input type="email" id="email" placeholder="abc@gmail.com">
+                         <label for="email" class="label-2">Email</label>
+                     </div>
+
+                     <div class="input-box-2">
+                        <input type="text" id="message" placeholder="hi there,....">
+                        <label for="message" class="label-3">Message</label>
+                     </div>
+
+                     <button type="submit" class="btn-warning" onsubmit="function handleSubmit(e){e.preventDefault()}">SEND</button>
+                 </form>
+           </div>
+      </div>
+    </div>
+  </body>
+
 </html>
