--- a/contact.html
+++ b/contact.html
@@ -1,97 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeIN Community</title>
-    <link rel="stylesheet" href="style/contact.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-      crossorigin="anonymous"
-    />
-  </head>
 
-  <body>
-    <div class="container">
-      <header>
-        <a href="." class="logo">
-          <img
-            src="./media/Images/CodeIN.png"
-            height="24"
-            width="30"
-            alt=""
-            srcset=""
-          />
-          CodeIN Community</a
-        >
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CodeIN Community</title>
+  <link rel="stylesheet" href="style/contact.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <style>
+    header {
+      box-shadow: 2px 2px 10px rgb(21, 9, 27);
+      background-color: rgb(63, 29, 95);
+    }
 
-        <div id="menu" class="fas fa-bars"></div>
-        <nav class="navbar">
-          <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Events</a></li>
-            <li><a href="#education">Teams</a></li>
-            <li><a href="contact.html" class="contact">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+    .content {
+      border: 2px solid rgba(37, 9, 37, 0.445);
+      padding: 20px;
+      border-radius: 15%;
+      background-color: rgba(17, 15, 19, 0.356);
+    }
 
+    footer {
+      margin: 0px;
+      padding: 0px;
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(63, 29, 95);
+    }
 
-      <div class="content">
-           <div class="left-side">
-              <div class="head">
-                <h1>Let's talk</h1>
-                <p>Ask us anything or just say hi...</p>
-              </div>
+    footer .main_container1 {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px 50px 0px 50px;
+      color: white;
+      line-height: 7px;
+    }
 
-              <div class="email">
-                 <p><i class="fas fa-envelope"></i>          hello@codeincommunity.com</p>  
-              </div>
+    footer .container2 {
+      margin-right: 70px;
+    }
 
-              <div class="socials">
-                  <button><a href="#"><i class="fab fa-discord"></i></a></button>
-                  <button><a href="#"><i class="fab fa-twitter"></i></a></button>
-                  <button><a href="#"><i class="fab fa-linkedin-in"></i></a></button>
-                  <button><a href="#"><i class="fab fa-instagram"></i></a></button>
-              </div>
+    footer h2 {
+      font-size: 20px;
+      text-shadow: 1px 1px 10px white;
+    }
 
-           </div>
+    footer p {
+      font-size: 14px;
+      text-align: left;
+    }
 
-           <div class="right-side">
-                 <form>
-                     <div class="input-box">
-                         <input type="text" id="name" placeholder="abc">
-                         <label for="name" class="label-1">Name</label>
+    footer .container2 #subscribepara {
+      font-size: 12px;
+    }
 
-                         <input type="email" id="email" placeholder="abc@gmail.com">
-                         <label for="email" class="label-2">Email</label>
-                     </div>
+    footer .container2 input {
+      font-size: 20px;
+    }
 
-                     <div class="input-box-2">
-                        <input type="text" id="message" placeholder="hi there,....">
-                        <label for="message" class="label-3">Message</label>
-                     </div>
+    footer .container2 button {
+      font: 14px;
+      position: relative;
+      top: -3px;
+    }
 
-                     <button type="submit" class="btn-warning" onsubmit="function handleSubmit(e){e.preventDefault()}">SEND</button>
-                 </form>
-           </div>
+    footer h6 {
+      padding-left: 25px;
+    }
+
+    @media (max-width:700px) {
+      footer .main_container1 {
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 5px 0px 5px;
+        color: white;
+        line-height: 7px;
+      }
+
+      footer .container2 button {
+        position: relative;
+        top: 3px;
+      }
+
+      footer h6 {
+        text-align: center;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <a href="." class="logo">
+        <img src="./media/Images/CodeIN.png" height="24" width="30" alt="" srcset="" />
+        CodeIN Community</a>
+
+      <div id="menu" class="fas fa-bars"></div>
+      <nav class="navbar">
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Events</a></li>
+          <li><a href="#education">Teams</a></li>
+          <li><a href="contact.html" class="contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <br>
+
+    <div class="content">
+      <div class="left-side">
+        <div class="head">
+          <h1>Let's talk <i class='far fa-comment' style='font-size:56px'></i></h1>
+          <p>Ask us anything or just say hi...</p>
+        </div>
+
+        <div class="email">
+          <p><i class="fas fa-envelope"></i> hello@codeincommunity.com</p>
+        </div>
+
+        <div class="socials">
+          <button><a href="#"><i class="fab fa-discord"></i></a></button>
+          <button><a href="#"><i class="fab fa-twitter"></i></a></button>
+          <button><a href="#"><i class="fab fa-linkedin-in"></i></a></button>
+          <button><a href="#"><i class="fab fa-instagram"></i></a></button>
+        </div>
+
+      </div>
+
+      <div class="right-side">
+        <form>
+          <div class="input-box">
+            <input type="text" id="name" placeholder="abc">
+            <label for="name" class="label-1">Name</label>
+
+            <input type="email" id="email" placeholder="abc@gmail.com">
+            <label for="email" class="label-2">Email</label>
+          </div>
+
+          <div class="input-box-2">
+            <input type="text" id="message" placeholder="hi there,....">
+            <label for="message" class="label-3">Message</label>
+          </div>
+
+          <button type="submit" class="btn-warning"
+            onsubmit="function handleSubmit(e){e.preventDefault()}">SEND</button>
+        </form>
       </div>
     </div>
-  </body>
+  </div>
+  <br><br>
+  <footer class="foot">
+    <div class="main_container1">
+      <div class="container1 mx-3">
+        <h2>Section</h2>
+        <p>Home</p>
+        <p>Home</p>
+        <p>Home</p>
+        <p>Home</p>
+      </div>
+      <div class="container1 mx-3">
+        <h2>Section</h2>
+        <p>Home</p>
+        <p>Home</p>
+        <p>Home</p>
+        <p>Home</p>
+      </div>
+      <div class="container1 mx-3">
+        <h2>Section</h2>
+        <p>Home</p>
+        <p>Home</p>
+        <p>Home</p>
+        <p>Home</p>
+      </div>
+      <div class="container2">
+        <h2>Subscribe to our newsletter</h2>
+        <p id="subscribepara" style="line-height: 15px;">Monthly digest of whats new and exciting
+          from us.</p>
+        <div>
+          <input type="email" name="email" id="email" placeholder="Email">
+          <button class="btn btn-primary">Subscribe</button>
+        </div>
+      </div>
+    </div>
+    <hr style="color: white;">
+    <div>
+      <div>
+        <h6 style="color: white;">@ 2021 Company, Inc.All rights reserved.</h6>
+      </div>
+    </div>
+  </footer>
+</body>
 
 </html>
