--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
+    <div id="particles-js"></div>
+
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    
+    <script>
+        particlesJS.load('particles-js', 'particlesjs-config.json', function() {
+  console.log('particles.js config loaded');
+});
+    </script>
+   
 
     <!-- preloader starts -->
     <div id="loader">
@@ -77,7 +87,7 @@
        </div>
       <!-- Hero Section Ends -->
       <!-- Container Ends -->
-  </body>
+    </body>
 
   <script>
       var loader = document.getElementById('loader');
