--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#skills">Events</a></li>
+            <li><a href="./events.html">Events</a></li>
             <li><a href="#education">Teams</a></li>
             <li><a href="contact.html">Contact</a></li>
          
