Change the structure of the page & structure code

--- a/events.html
+++ b/events.html
@@ -77,6 +77,8 @@
                 </div>
             </div>
         </div>
+        <a href="/index.html" class="container text-light fw-bold">&laquo; Back to home</a>
+        
     </div>
 
 
