--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <!-- preloader starts -->
-    <div id="loader">
+    <!-- <div id="loader">
     <div class="cssload-loader-inner">
       <div class="cssload-cssload-loader-line-wrap-wrap">
         <div class="cssload-loader-line-wrap"></div>
@@ -42,7 +42,7 @@
         <div class="cssload-loader-line-wrap"></div>
       </div>
     </div>
-  </div>
+  </div> -->
     <!-- <div id="loader"></div> -->
     <!-- preloader ends -->
 
@@ -50,7 +50,7 @@
     <div >
       <!-- Navigation Starts -->
       <header class="navtrans">
-        <a href="." class="logo"> <img src="./media/Images/CodeIN.png" height="24" width="30" alt="" srcset=""> CodeIN Community</a>
+        <a href="." class="logo"> <img src="./media/Images/CodeIN.png" height="50" width="50" alt="" srcset=""> CodeIN Community</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -59,7 +59,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="./events.html">Events</a></li>
             <li><a href="#education">Teams</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><button class="contact-button" href="contact.html">Contact</button></li>
 
             </ul>
         </nav>
@@ -80,7 +80,7 @@
                 Where we share Resources, Roadmaps to learn different technologies.
                 <span>We organize events on different technologies.</span>
               </p>
-              <button class="btn btn-warning"> <a href="https://discord.com/invite/hWwbgP4dz9">Join on Discord</a></button>
+              <button class="btn btn-warning hero-button" > <a href="https://discord.com/invite/hWwbgP4dz9">Join on Discord</a></button>
             </div>
         </div>
        </div>
