Fixed and Stylized the Button and Button Design

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <!-- preloader starts -->
-    <!-- <div id="loader">
+    <div id="loader">
     <div class="cssload-loader-inner">
       <div class="cssload-cssload-loader-line-wrap-wrap">
         <div class="cssload-loader-line-wrap"></div>
@@ -42,8 +42,8 @@
         <div class="cssload-loader-line-wrap"></div>
       </div>
     </div>
-  </div> -->
-    <!-- <div id="loader"></div> -->
+  </div> 
+     <!-- <div id="loader"></div> -->
     <!-- preloader ends -->
 
     <!-- Container Starts -->
