Fixed the Alignment of Image and text of home page

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
     <div >
       <!-- Navigation Starts -->
       <header class="navtrans">
-        <a href="." class="logo"> <img src="./media/Images/CodeIN.png" height="50" width="50" alt="" srcset=""> CodeIN Community</a>
+        <a href="#" class="logo"> <img src="./media/Images/CodeIN 2.png"  alt="" srcset=""> CodeIN Community</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
             <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="./events.html">Events</a></li>
-            <li><a href="#education">Teams</a></li>
+            <li><a href="#about">Projects</a></li>
+            <li><a href="./events.html">About</a></li>
+            <li><a href="#education">Events</a></li>
             <li><button class="contact-button" href="contact.html">Contact</button></li>
 
             </ul>
@@ -71,7 +71,9 @@
       <div >
         <div class="row">
           <div class="col-md-6">
-            <div class="hero-left"></div>
+            <div class="hero-left">
+              <img src="./media/Images/hero.png"  alt="">
+            </div>
           </div>
           <div class="col-md-6">
             <div class="hero-right">
