Fixed the Navbar Logo and Design

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <!-- preloader starts -->
-    <div id="loader">
+    <!-- <div id="loader">
     <div class="cssload-loader-inner">
       <div class="cssload-cssload-loader-line-wrap-wrap">
         <div class="cssload-loader-line-wrap"></div>
@@ -42,7 +42,7 @@
         <div class="cssload-loader-line-wrap"></div>
       </div>
     </div>
-  </div> 
+  </div>  -->
      <!-- <div id="loader"></div> -->
     <!-- preloader ends -->
 
@@ -50,15 +50,19 @@
     <div >
       <!-- Navigation Starts -->
       <header class="navtrans">
-        <a href="#" class="logo"> <img src="./media/Images/CodeIN 2.png"  alt="" srcset=""> CodeIN Community</a>
+        <div class="logoicon">
+          <a href="#" class="logo"> <img src="./media/Images/CodeIN 2.png"  alt="" srcset=""></a>
+          <h1>CODEIN<br>COMMUNITY</h1>
+        </div>
+        
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#about">Projects</a></li>
-            <li><a href="./events.html">About</a></li>
-            <li><a href="#education">Events</a></li>
+            <li><a href="#education">About</a></li>
+            <li><a href="./events.html">Events</a></li>
             <li><button class="contact-button" href="contact.html">Contact</button></li>
 
             </ul>
@@ -67,7 +71,7 @@
       <!-- Navigation Ends -->
 
       <!-- Hero-Section Starts  -->
-      <div class="conatiner hero-section">
+      <div class=" hero-section">
       <div >
         <div class="row">
           <div class="col-md-6">
@@ -94,10 +98,9 @@
       <div class="footer-dark">
         <footer>
             <div  class="container">
-                <div class="row">
-
-                    <div class="col item social"><a href="#"><i  class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-twitter"></i><a href="#"><i class="fab fa-snapchat-ghost"></i></a><a href="#"><i class="fab fa-linkedin"></i></a></div>
-
+              <div class="row">
+              <div class="col item social"><a href="#"><i  class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-twitter"></i><a href="#"><i class="fab fa-snapchat-ghost"></i></a><a href="#"><i class="fab fa-linkedin"></i></a>
+            </div>
         </footer>
     </div>
   </body>
