Revert "Fixed The Navbar Logo Design and Whole Navbar Style Like One in the Picture Given"

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="cssload-loader-line-wrap"></div>
       </div>
     </div>
-  </div>  
+  </div> 
      <!-- <div id="loader"></div> -->
     <!-- preloader ends -->
 
@@ -50,19 +50,15 @@
     <div >
       <!-- Navigation Starts -->
       <header class="navtrans">
-        <div class="logoicon">
-          <a href="#" class="logo"> <img src="./media/Images/CodeIN 2.png"  alt="" srcset=""></a>
-          <h1>CODEIN<br>COMMUNITY</h1>
-        </div>
-        
+        <a href="#" class="logo"> <img src="./media/Images/CodeIN 2.png"  alt="" srcset=""> CodeIN Community</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#about">Projects</a></li>
-            <li><a href="#education">About</a></li>
-            <li><a href="./events.html">Events</a></li>
+            <li><a href="./events.html">About</a></li>
+            <li><a href="#education">Events</a></li>
             <li><button class="contact-button" href="contact.html">Contact</button></li>
 
             </ul>
@@ -71,7 +67,7 @@
       <!-- Navigation Ends -->
 
       <!-- Hero-Section Starts  -->
-      <div class=" hero-section">
+      <div class="conatiner hero-section">
       <div >
         <div class="row">
           <div class="col-md-6">
@@ -98,9 +94,10 @@
       <div class="footer-dark">
         <footer>
             <div  class="container">
-              <div class="row">
-              <div class="col item social"><a href="#"><i  class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-twitter"></i><a href="#"><i class="fab fa-snapchat-ghost"></i></a><a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
+                <div class="row">
+
+                    <div class="col item social"><a href="#"><i  class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-twitter"></i><a href="#"><i class="fab fa-snapchat-ghost"></i></a><a href="#"><i class="fab fa-linkedin"></i></a></div>
+
         </footer>
     </div>
   </body>
