--- a/contact.html
+++ b/contact.html
@@ -137,22 +137,21 @@
       </div>
 
       <div class="right-side">
-        <form>
+        <form id="contactForm">
           <div class="input-box">
-            <input type="text" id="name" placeholder="abc">
+            <input type="text" id="name" placeholder="abc" required>
             <label for="name" class="label-1">Name</label>
 
-            <input type="email" id="email" placeholder="abc@gmail.com">
+            <input type="email" id="email" placeholder="abc@gmail.com" required>
             <label for="email" class="label-2">Email</label>
           </div>
 
           <div class="input-box-2">
-            <input type="text" id="message" placeholder="hi there,....">
+            <input type="text" id="message" placeholder="hi there,...." required>
             <label for="message" class="label-3">Message</label>
           </div>
 
-          <button type="submit" class="btn-warning"
-            onsubmit="function handleSubmit(e){e.preventDefault()}">SEND</button>
+          <button type="submit" class="btn-warning">SEND</button>
         </form>
       </div>
     </div>
@@ -198,6 +197,28 @@
       </div>
     </div>
   </footer>
+
+
+<!-- emailjs to mail contact form data -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+<script type="text/javascript">
+(function() {
+emailjs.init("YOUR_USER_ID");
+
+emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', '#contactForm')
+    .then(function(response) {
+       console.log('SUCCESS!', response.status, response.text);
+       alert("Form Submitted Successfully");
+      }, function(error) {
+        console.log('FAILED...', error);
+        alert("Form Submission Failed! Try Again");
+    });
+
+})();
+</script>
+<!-- emailjs to mail contact form data -->
+
 </body>
 
 </html>
