--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@ emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', '#contactForm')
        alert("Form Submitted Successfully");
       }, function(error) {
         console.log('FAILED...', error);
-        alert("Form Submission Failed! Try Again");
+        // alert("Form Submission Failed! Try Again");
     });
 
 })();
