Given correct link to the event button on the landing page so that it directs to the events page and created a About.html page so that more people can contribute.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#about">Projects</a></li>
-            <li><a href="./events.html">About</a></li>
-            <li><a href="#education">Events</a></li>
+            <li><a href="./About.html">About</a></li>
+            <li><a href="./events.html">Events</a></li>
             <li><button class="contact-button" href="contact.html">Contact</button></li>
 
             </ul>
