--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li><a href="#about">Projects</a></li>
             <li><a href="./About.html">About</a></li>
             <li><a href="./events.html">Events</a></li>
-            <li><button class="contact-button" href="contact.html">Contact</button></li>
+            <li><button class="contact-button" href="./contact.html">Contact</button></li>
 
             </ul>
         </nav>
