--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CodeIN Community</title>
+  <link rel="shortcut icon" type="image/jpg" href="media\Images\favicon.png"/>"
   <link rel="stylesheet" href="style/contact.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -23,7 +24,7 @@
     .content {
       border: 2px solid rgba(37, 9, 37, 0.445);
       padding: 20px;
-      border-radius: 15%;
+      border-radius: 3em;
       background-color: rgba(17, 15, 19, 0.356);
     }
 
