Added navbar in events.html

--- a/events.html
+++ b/events.html
@@ -15,7 +15,23 @@
     <link rel="shortcut icon" type="image/jpg" href="media\Images\favicon.png"/>"
 </head>
 <body>
-
+    <div>
+        <header class="navtrans">
+            <a href="#" class="logo"> <img src="./media/Images/CodeIN 2.png" alt="" srcset=""> CodeIN Community</a>
+      
+            <div id="menu" class="fas fa-bars"></div>
+            <nav class="navbar">
+              <ul>
+                <li><a class="active" href="index.html #home">Home</a></li>
+                <li><a href="index.html #about">Projects</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><button class="contact-button" href="contact.html">Contact</button></li>
+      
+              </ul>
+            </nav>
+          </header>
+    </div>
     <div class="cards">
         <h1 class="text-center p-5 title">Our <span class="main_title">Events</span></h1>
         <div class="cards-section mt-2">
