--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <nav class="navbar">
         <ul>
           <li><a class="active" href="#home">Home</a></li>
-          <li><a href="#about">Projects</a></li>
+          <li><a href="./team.html">Team</a></li>
           <li><a href="./About.html">About</a></li>
           <li><a href="./events.html">Events</a></li>
           <li><button class="contact-button" href="./contact.html">Contact</button></li>
