--- a/events.html
+++ b/events.html
@@ -22,12 +22,11 @@
             <div id="menu" class="fas fa-bars"></div>
             <nav class="navbar">
               <ul>
-                <li><a class="active" href="index.html #home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index.html #about">Projects</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="events.html">Events</a></li>
+                <li><a class="active" href="events.html">Events</a></li>
                 <li><button class="contact-button" href="contact.html">Contact</button></li>
-      
               </ul>
             </nav>
           </header>
