--- a/team.html
+++ b/team.html
@@ -18,15 +18,15 @@
     <div class="wrapper">
         <!--  team logo -->
         <div class="img1">
-            <img src="/media/Images/our team.png" alt="logo" />
+            <img src="./media/Images/our team.png" alt="logo" />
         </div>
         <!-- end -->
         <div class="carousel owl-carousel">
-            <div class="cards">
+            <div class="cards card-1">
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Saurav Mukherjee.jfif" alt="Saurav Mukherjee" />
+                            <img src="./media/Images/Saurav Mukherjee.jfif" alt="Saurav Mukherjee" />
                         </div>
                         <div class="details">
                             <div class="name">Saurav Mukherjee</div>
@@ -41,11 +41,11 @@
                     </div>
                 </div>
             </div>
-            <div class="cards">
+            <div class="cards card-2">
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Sneha Roopa Sri.jfif" alt="Sneha Roopa Sri" />
+                            <img src="./media/Images/Sneha Roopa Sri.jfif" alt="Sneha Roopa Sri" />
                         </div>
                         <div class="details">
                             <div class="name">Sneha Roopa Sri</div>
@@ -63,7 +63,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Sidharth Sethi.jfif" alt="Sidharth Sethi" />
+                            <img src="./media/Images/Sidharth Sethi.jfif" alt="Sidharth Sethi" />
                         </div>
                         <div class="details">
                             <div class="name">Sidharth Sethi</div>
@@ -82,7 +82,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Sujana Kamasany.jfif" alt="Sujana Kamasany" />
+                            <img src="./media/Images/Sujana Kamasany.jfif" alt="Sujana Kamasany" />
                         </div>
                         <div class="details">
                             <div class="name">Sujana Kamasany</div>
@@ -99,7 +99,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Nitesh Agnihotri.jfif" alt="Nitesh Agnihotri" />
+                            <img src="./media/Images/Nitesh Agnihotri.jfif" alt="Nitesh Agnihotri" />
                         </div>
                         <div class="details">
                             <div class="name">Nitesh Agnihotri</div>
@@ -116,7 +116,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Pallavi Pandey.jfif" alt="Pallavi Pandey" />
+                            <img src="./media/Images/Pallavi Pandey.jfif" alt="Pallavi Pandey" />
                         </div>
                         <div class="details">
                             <div class="name">Pallavi Pandey</div>
@@ -134,7 +134,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Swarna jha.jfif" alt="Swarna jha" />
+                            <img src="./media/Images/Swarna jha.jfif" alt="Swarna jha" />
                         </div>
                         <div class="details">
                             <div class="name">Swarna jha</div>
@@ -152,7 +152,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Pranav Verma.jfif" alt="Pranav Verma" />
+                            <img src="./media/Images/Pranav Verma.jfif" alt="Pranav Verma" />
                         </div>
                         <div class="details">
                             <div class="name">Pranav Verma</div>
@@ -170,7 +170,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Anjali Kumari.jfif" alt="Anjali Kumari" />
+                            <img src="./media/Images/Anjali Kumari.jfif" alt="Anjali Kumari" />
                         </div>
                         <div class="details">
                             <div class="name">Anjali Kumari</div>
@@ -187,7 +187,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Rudramadhaba Mishra.jfif" alt="Rudramadhaba Mishra" />
+                            <img src="./media/Images/Rudramadhaba Mishra.jfif" alt="Rudramadhaba Mishra" />
                         </div>
                         <div class="details">
                             <div class="name">Rudramadhaba Mishra</div>
@@ -205,7 +205,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/Aakriti Arun.jfif" alt="Aakriti Arun" />
+                            <img src="./media/Images/Aakriti Arun.jfif" alt="Aakriti Arun" />
                         </div>
                         <div class="details">
                             <div class="name">Aakriti Arun</div>
@@ -222,7 +222,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="img">
-                            <img src="/media/Images/SaiTarun.png" alt="SaiTarun">
+                            <img src="./media/Images/SaiTarun.png" alt="SaiTarun">
                         </div>
                         <div class="details">
                             <div class="name">SaiTarun</div>
@@ -239,7 +239,7 @@
             <div class="card">
                 <div class="content">
                     <div class="img">
-                        <img src="/media/Images/Aditi Dubey.jfif" alt="">
+                        <img src="./media/Images/Aditi Dubey.jfif" alt="">
                     </div>
                     <div class="details">
                         <div class="name">Aditi Dubey</div>
@@ -256,7 +256,7 @@
             <div class="card">
                 <div class="content">
                   <div class="img">
-                    <img src="/media/Images/Akanksha.jfif" alt="Akanksha">
+                    <img src="./media/Images/Akanksha.jfif" alt="Akanksha">
                   </div>
                   <div class="details">
                     <div class="name">Akanksha</div>
@@ -273,7 +273,7 @@
             <div class="card">
                 <div class="content">
                   <div class="img">
-                    <img src="/media/Images/Tara Choudhary.jpg" alt="Tara Choudhary">
+                    <img src="./media/Images/Tara Choudhary.jpg" alt="Tara Choudhary">
                   </div>
                   <div class="details">
                     <div class="name">Tara Choudhary</div>
