--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
               <div class="contents">
-                <h2 class="head-title">CodeIN Community<br>Coding Enthusiasts</h2>
+                <h2 class="head-title">CodeIN Community<br>Community of Coding Enthusiasts</h2>
                 <p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps to learn different technologies. We organize events on different technologies.</p>
                 <div class="header-button">
                   <a href="https://discord.com/invite/hWwbgP4dz9" target="_blank" class="btn btn-common">Join Now</i></a>
